--- a/index.html
+++ b/index.html
@@ -4,6 +4,272 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FitLife AI</title>
+    
+    <style>
+      *,:after,:before{box-sizing:border-box;border-width:0;border-style:solid;border-color:#e5e7eb}
+      :after,:before{--tw-content:""}
+      html{line-height:1.5;-webkit-text-size-adjust:100%;-moz-tab-size:4;tab-size:4;font-family:ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;font-feature-settings:normal;font-variation-settings:normal}
+      body{margin:0;line-height:inherit}
+      hr{height:0;color:inherit;border-top-width:1px}
+      abbr:where([title]){-webkit-text-decoration:underline dotted;text-decoration:underline dotted}
+      h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight:inherit}
+      a{color:inherit;text-decoration:inherit}
+      b,strong{font-weight:bolder}
+      code,kbd,pre,samp{font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,Liberation Mono,Courier New,monospace;font-size:1em}
+      small{font-size:80%}
+      sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}
+      sub{bottom:-.25em}
+      sup{top:-.5em}
+      table{text-indent:0;border-color:inherit;border-collapse:collapse}
+      button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;font-weight:inherit;line-height:inherit;color:inherit;margin:0;padding:0}
+      button,select{text-transform:none}
+      [type=button],button,[type=reset],[type=submit]{-webkit-appearance:button;background-color:transparent;background-image:none}
+      ::-moz-focus-inner{border-style:none;padding:0}
+      :-moz-focusring{outline:1px dotted ButtonText}
+      :-moz-ui-invalid{box-shadow:none}
+      legend{padding:0}
+      progress{vertical-align:baseline}
+      ::-webkit-inner-spin-button,::-webkit-outer-spin-button{height:auto}
+      [type=search]{-webkit-appearance:textfield;outline-offset:-2px}
+      ::-webkit-search-decoration{-webkit-appearance:none}
+      ::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}
+      summary{display:list-item}
+      blockquote,dd,dl,figure,h1,h2,h3,h4,h5,h6,hr,p,pre{margin:0}
+      fieldset{margin:0;padding:0}
+      legend{padding:0}
+      menu,ol,ul{list-style:none;margin:0;padding:0}
+      textarea{resize:vertical}
+      input::placeholder,textarea::placeholder{opacity:1;color:#9ca3af}
+      button,[role=button]{cursor:pointer}
+      :disabled{cursor:default}
+      audio,canvas,embed,iframe,img,object,svg,video{display:block;vertical-align:middle}
+      img,video{max-width:100%;height:auto}
+      [hidden]{display:none}
+      .onboarding-root{font-family:"Segoe UI",Tahoma,Geneva,Verdana,sans-serif;background:linear-gradient(135deg,#0f2027,#203a43 50%,#2c5364);min-height:100vh;display:flex;justify-content:center;align-items:center;padding:20px;position:relative;overflow:hidden}
+      .bg-animation{position:absolute;width:100%;height:100%;overflow:hidden;z-index:0}
+      .particle{position:absolute;background:rgba(16,185,129,.1);border-radius:50%;animation:float 20s infinite}
+      .particle:nth-child(1){width:80px;height:80px;left:10%;animation-delay:0s}
+      .particle:nth-child(2){width:120px;height:120px;right:15%;animation-delay:2s}
+      .particle:nth-child(3){width:60px;height:60px;left:50%;animation-delay:4s}
+      @keyframes float{0%,to{transform:translateY(0) rotate(0);opacity:.3}50%{transform:translateY(-100px) rotate(180deg);opacity:.6}}
+      .language-switch{position:absolute;top:20px;left:20px;z-index:100;display:flex;gap:5px;background:rgba(255,255,255,.1);padding:5px;border-radius:20px;backdrop-filter:blur(10px)}
+      .lang-btn{padding:8px 16px;border:none;background:transparent;color:#fff;cursor:pointer;border-radius:15px;font-weight:600;transition:all .3s ease;-webkit-tap-highlight-color:transparent;touch-action:manipulation;user-select:none;-webkit-user-select:none}
+      .lang-btn.active{background:#10b981;box-shadow:0 2px 8px rgba(16,185,129,.4)}
+      .lang-btn:active{transform:scale(.95)}
+      .container{position:relative;z-index:1;background:rgba(30,41,59,.95);border-radius:30px;padding:50px 40px;max-width:480px;width:100%;box-shadow:0 20px 60px rgba(0,0,0,.5),0 0 100px rgba(16,185,129,.1);backdrop-filter:blur(20px);border:1px solid rgba(255,255,255,.1);animation:slideUp .6s ease-out}
+      @keyframes slideUp{0%{opacity:0;transform:translateY(50px)}to{opacity:1;transform:translateY(0)}}
+      .header{text-align:center;margin-bottom:40px}
+      .logo{font-size:42px;font-weight:800;margin-bottom:10px;background:linear-gradient(135deg,#10b981,#34d399);-webkit-background-clip:text;-webkit-text-fill-color:transparent;background-clip:text;text-shadow:0 0 30px rgba(16,185,129,.3)}
+      .welcome-text{color:#e2e8f0;font-size:18px;font-weight:300}
+      .subtitle{color:#94a3b8;font-size:14px;margin-top:5px}
+      .section-title{color:#10b981;font-size:22px;font-weight:700;margin-bottom:25px;text-align:center;letter-spacing:1px;text-transform:uppercase}
+      .form-group{margin-bottom:25px}
+      label{display:block;color:#cbd5e1;font-size:14px;font-weight:600;margin-bottom:10px;text-transform:uppercase;letter-spacing:.5px}
+      input,select{width:100%;padding:16px 20px;background:rgba(15,23,42,.6);border:2px solid rgba(255,255,255,.1);border-radius:15px;color:#fff;font-size:16px;transition:all .3s ease;backdrop-filter:blur(10px);-webkit-tap-highlight-color:transparent}
+      input:focus,select:focus{outline:none;border-color:#10b981;background:rgba(15,23,42,.8);box-shadow:0 0 0 4px rgba(16,185,129,.1)}
+      select option{background:#1e293b;color:#fff;padding:10px}
+      input[type=number]{-moz-appearance:textfield;appearance:textfield}
+      input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-spin-button{-webkit-appearance:none;margin:0}
+      .btn-primary:focus-visible,input:focus-visible,.lang-btn:focus-visible,select:focus-visible{outline:3px solid #10b981;outline-offset:2px}
+      .btn-primary{width:100%;padding:18px;background:linear-gradient(135deg,#10b981,#059669);border:none;border-radius:15px;color:#fff;font-size:18px;font-weight:700;cursor:pointer;transition:all .3s ease;text-transform:uppercase;letter-spacing:1px;box-shadow:0 10px 30px rgba(16,185,129,.3);position:relative;overflow:hidden;-webkit-tap-highlight-color:transparent;touch-action:manipulation;user-select:none;-webkit-user-select:none}
+      .btn-primary:disabled{background:linear-gradient(135deg,#4b5563,#374151);cursor:not-allowed;box-shadow:none}
+      .btn-primary:before{content:"";position:absolute;top:0;left:-100%;width:100%;height:100%;background:linear-gradient(90deg,transparent,rgba(255,255,255,.2),transparent);transition:left .5s ease}
+      .btn-primary:hover:not(:disabled):before{left:100%}
+      .btn-primary:hover:not(:disabled){transform:translateY(-2px);box-shadow:0 15px 40px rgba(16,185,129,.4)}
+      .btn-primary:active:not(:disabled){transform:translateY(0) scale(.98);box-shadow:0 5px 15px rgba(16,185,129,.3)}
+      .btn-secondary{padding:18px;background:transparent;border:2px solid rgba(255,255,255,.2);border-radius:15px;color:#cbd5e1;font-size:18px;font-weight:700;cursor:pointer;transition:all .3s ease;text-transform:uppercase;letter-spacing:1px}
+      .btn-secondary:hover{background:rgba(255,255,255,.1);border-color:rgba(255,255,255,.3)}
+      .progress-bar{width:100%;height:6px;background:rgba(255,255,255,.1);border-radius:10px;margin-top:30px;overflow:hidden}
+      .progress-fill{height:100%;width:0;background:linear-gradient(90deg,#10b981,#34d399);border-radius:10px;transition:width .3s ease;box-shadow:0 0 10px rgba(16,185,129,.5)}
+      .deco-circle{position:absolute;border-radius:50%;border:2px solid rgba(16,185,129,.2);pointer-events:none}
+      .deco-circle-1{width:200px;height:200px;top:-100px;right:-100px}
+      .deco-circle-2{width:150px;height:150px;bottom:-75px;left:-75px}
+      .icon-decoration{position:absolute;font-size:60px;opacity:.05;pointer-events:none}
+      .icon-dumbbell{top:50px;right:30px}
+      .icon-apple{bottom:50px;left:30px}
+      @media (max-width:480px){.onboarding-root{padding:15px;align-items:flex-start;padding-top:5rem}
+      .container{padding:35px 20px;border-radius:20px;max-width:100%}
+      .logo{font-size:32px}
+      .section-title{font-size:18px}
+      label{font-size:12px}
+      input,select{font-size:15px;padding:14px 16px;border-radius:12px}
+      .btn-primary,.btn-secondary{font-size:16px;padding:16px;border-radius:12px}}
+      .fixed{position:fixed}
+      .absolute{position:absolute}
+      .relative{position:relative}
+      .inset-0{inset:0}
+      .bottom-0{bottom:0}
+      .left-0{left:0}
+      .right-0{right:0}
+      .top-4{top:1rem}
+      .z-50{z-index:50}
+      .mx-auto{margin-left:auto;margin-right:auto}
+      .mb-1{margin-bottom:.25rem}
+      .mb-2{margin-bottom:.5rem}
+      .mb-3{margin-bottom:.75rem}
+      .mb-4{margin-bottom:1rem}
+      .mr-2{margin-right:.5rem}
+      .mr-3{margin-right:.75rem}
+      .mt-1{margin-top:.25rem}
+      .mt-2{margin-top:.5rem}
+      .mt-4{margin-top:1rem}
+      .mt-6{margin-top:1.5rem}
+      .mb-6{margin-bottom:1.5rem}
+      .mt-8{margin-top:2rem}
+      .mb-8{margin-bottom:2rem}
+      .block{display:block}
+      .flex{display:flex}
+      .grid{display:grid}
+      .hidden{display:none}
+      .h-1\.5{height:.375rem}
+      .h-2{height:.5rem}
+      .h-4{height:1rem}
+      .h-5{height:1.25rem}
+      .h-6{height:1.5rem}
+      .h-8{height:2rem}
+      .h-auto{height:auto}
+      .h-screen{height:100vh}
+      .w-2{width:.5rem}
+      .w-4{width:1rem}
+      .w-5{width:1.25rem}
+      .w-6{width:1.5rem}
+      .w-8{width:2rem}
+      .w-12{width:3rem}
+      .w-20{width:5rem}
+      .w-full{width:100%}
+      .max-w-sm{max-width:24rem}
+      .max-w-lg{max-width:32rem}
+      .max-w-full{max-width:100%}
+      .max-w-none{max-width:none}
+      .flex-1{flex:1 1 0%}
+      .flex-grow{flex-grow:1}
+      .shrink-0{flex-shrink:0}
+      .transform{transform:translate(var(--tw-translate-x),var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))}
+      .animate-pulse{animation:pulse 2s cubic-bezier(.4,0,.6,1) infinite}
+      .animate-spin{animation:spin 1s linear infinite}
+      @keyframes spin{to{transform:rotate(360deg)}}
+      @keyframes pulse{50%{opacity:.5}}
+      .cursor-pointer{cursor:pointer}
+      .grid-cols-2{grid-template-columns:repeat(2,minmax(0,1fr))}
+      .grid-cols-3{grid-template-columns:repeat(3,minmax(0,1fr))}
+      .grid-cols-4{grid-template-columns:repeat(4,minmax(0,1fr))}
+      .flex-col{flex-direction:column}
+      .items-start{align-items:flex-start}
+      .items-center{align-items:center}
+      .justify-center{justify-content:center}
+      .justify-around{justify-content:space-around}
+      .justify-between{justify-content:space-between}
+      .gap-2{gap:.5rem}
+      .gap-4{gap:1rem}
+      .gap-x-4{column-gap:1rem}
+      .gap-y-2{row-gap:.5rem}
+      .space-x-2>:not([hidden])~:not([hidden]){--tw-space-x-reverse:0;margin-right:calc(.5rem * var(--tw-space-x-reverse));margin-left:calc(.5rem * calc(1 - var(--tw-space-x-reverse)))}
+      .space-x-3>:not([hidden])~:not([hidden]){--tw-space-x-reverse:0;margin-right:calc(.75rem * var(--tw-space-x-reverse));margin-left:calc(.75rem * calc(1 - var(--tw-space-x-reverse)))}
+      .space-y-1>:not([hidden])~:not([hidden]){--tw-space-y-reverse:0;margin-top:calc(.25rem * calc(1 - var(--tw-space-y-reverse)));margin-bottom:calc(.25rem * var(--tw-space-y-reverse))}
+      .space-y-2>:not([hidden])~:not([hidden]){--tw-space-y-reverse:0;margin-top:calc(.5rem * calc(1 - var(--tw-space-y-reverse)));margin-bottom:calc(.25rem * var(--tw-space-y-reverse))}
+      .space-y-4>:not([hidden])~:not([hidden]){--tw-space-y-reverse:0;margin-top:calc(1rem * calc(1 - var(--tw-space-y-reverse)));margin-bottom:calc(1rem * var(--tw-space-y-reverse))}
+      .space-y-6>:not([hidden])~:not([hidden]){--tw-space-y-reverse:0;margin-top:calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));margin-bottom:calc(1.5rem * var(--tw-space-y-reverse))}
+      .overflow-hidden{overflow:hidden}
+      .overflow-y-auto{overflow-y:auto}
+      .whitespace-pre-wrap{white-space:pre-wrap}
+      .object-cover{object-fit:cover}
+      .aspect-square{aspect-ratio:1/1}
+      .rounded{border-radius:.25rem}
+      .rounded-full{border-radius:9999px}
+      .rounded-lg{border-radius:.5rem}
+      .rounded-2xl{border-radius:1rem}
+      .rounded-l-lg{border-top-left-radius:.5rem;border-bottom-left-radius:.5rem}
+      .rounded-r-lg{border-top-right-radius:.5rem;border-bottom-right-radius:.5rem}
+      .rounded-br-lg{border-bottom-right-radius:.5rem}
+      .rounded-tl-lg{border-top-left-radius:.5rem}
+      .border{border-width:1px}
+      .border-t{border-top-width:1px}
+      .border-b-2{border-bottom-width:2px}
+      .border-primary{border-color:#10b981}
+      .border-gray-600{border-color:#4b5563}
+      .border-gray-700{border-color:#374151}
+      .bg-background{background-color:#111827}
+      .bg-surface{background-color:#1f2937}
+      .bg-primary{background-color:#10b981}
+      .bg-gray-600{background-color:#4b5563}
+      .bg-gray-700{background-color:#374151}
+      .bg-black\/50{background-color:rgba(0,0,0,.5)}
+      .bg-primary\/20{background-color:rgba(16,185,129,.2)}
+      .bg-yellow-500\/20{background-color:rgba(234,179,8,.2)}
+      .bg-red-600{background-color:#dc2626}
+      .bg-black\/60{background-color:rgba(0,0,0,.6)}
+      .p-1{padding:.25rem}
+      .p-2{padding:.5rem}
+      .p-3{padding:.75rem}
+      .p-4{padding:1rem}
+      .p-6{padding:1.5rem}
+      .p-8{padding:2rem}
+      .px-1{padding-left:.25rem;padding-right:.25rem}
+      .pt-2{padding-top:.5rem}
+      .pb-1{padding-bottom:.25rem}
+      .pb-20{padding-bottom:5rem}
+      .px-2{padding-left:.5rem;padding-right:.5rem}
+      .py-2{padding-top:.5rem;padding-bottom:.5rem}
+      .px-3{padding-left:.75rem;padding-right:.75rem}
+      .px-4{padding-left:1rem;padding-right:1rem}
+      .py-3{padding-top:.75rem;padding-bottom:.75rem}
+      .py-4{padding-top:1rem;padding-bottom:1rem}
+      .py-10{padding-top:2.5rem;padding-bottom:2.5rem}
+      .text-center{text-align:center}
+      .font-sans{font-family:ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji}
+      .text-xs{font-size:.75rem;line-height:1rem}
+      .text-sm{font-size:.875rem;line-height:1.25rem}
+      .text-lg{font-size:1.125rem;line-height:1.75rem}
+      .text-xl{font-size:1.25rem;line-height:1.75rem}
+      .text-2xl{font-size:1.5rem;line-height:2rem}
+      .text-3xl{font-size:1.875rem;line-height:2.25rem}
+      .font-bold{font-weight:700}
+      .font-medium{font-weight:500}
+      .font-semibold{font-weight:600}
+      .uppercase{text-transform:uppercase}
+      .normal-case{text-transform:none}
+      .tracking-normal{letter-spacing:0}
+      .text-on-surface{color:#f9fafb}
+      .text-on-surface-secondary{color:#9ca3af}
+      .text-primary{color:#10b981}
+      .text-white{color:#fff}
+      .text-red-500{color:#ef4444}
+      .text-yellow-300{color:#fde047}
+      .text-gray-500{color:#6b7280}
+      .shadow-lg{--tw-shadow:0 10px 15px -3px rgba(0,0,0,.1),0 4px 6px -4px rgba(0,0,0,.1);--tw-shadow-colored:0 10px 15px -3px var(--tw-shadow-color),0 4px 6px -4px var(--tw-shadow-color);box-shadow:var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow)}
+      .shadow-xl{--tw-shadow:0 20px 25px -5px rgba(0,0,0,.1),0 8px 10px -6px rgba(0,0,0,.1);--tw-shadow-colored:0 20px 25px -5px var(--tw-shadow-color),0 8px 10px -6px var(--tw-shadow-color);box-shadow:var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow)}
+      .outline{outline-style:solid}
+      .transition-all{transition-property:all;transition-timing-function:cubic-bezier(.4,0,.2,1);transition-duration:.15s}
+      .transition-colors{transition-property:color,background-color,border-color,text-decoration-color,fill,stroke;transition-timing-function:cubic-bezier(.4,0,.2,1);transition-duration:.15s}
+      .duration-200{transition-duration:.2s}
+      .duration-500{transition-duration:.5s}
+      .ease-linear{transition-timing-function:linear}
+      .delay-75{transition-delay:75ms}
+      .delay-150{transition-delay:.15s}
+      .prose{color:#6b7280}
+      .prose :where(pre):not(:where([class~=not-prose] *)){color:#e5e7eb;background-color:#1f2937;overflow-x:auto;padding:.8em 1em;border-radius:.375rem}
+      .prose-invert{--tw-prose-body:#d1d5db;--tw-prose-headings:#fff;--tw-prose-lead:#9ca3af;--tw-prose-links:#fff;--tw-prose-bold:#fff;--tw-prose-counters:#9ca3af;--tw-prose-bullets:#6b7280;--tw-prose-hr:#4b5563;--tw-prose-quotes:#f3f4f6;--tw-prose-quote-borders:#374151;--tw-prose-captions:#9ca3af;--tw-prose-code:#fff;--tw-prose-pre-code:#d1d5db;--tw-prose-pre-bg:#1f2937;--tw-prose-th-borders:#4b5563;--tw-prose-td-borders:#374151;--tw-prose-invert-body:#374151;--tw-prose-invert-headings:#111827;--tw-prose-invert-lead:#4b5563;--tw-prose-invert-links:#111827;--tw-prose-invert-bold:#111827;--tw-prose-invert-counters:#6b7280;--tw-prose-invert-bullets:#4b5563;--tw-prose-invert-hr:#374151;--tw-prose-invert-quotes:#1f2937;--tw-prose-invert-quote-borders:#e5e7eb;--tw-prose-invert-captions:#6b7280;--tw-prose-invert-code:#111827;--tw-prose-invert-pre-code:#e5e7eb;--tw-prose-invert-pre-bg:rgba(0,0,0,.5);--tw-prose-invert-th-borders:#374151;--tw-prose-invert-td-borders:#4b5563}
+      .hover\\:bg-primary-focus:hover{background-color:#059669}
+      .hover\\:bg-gray-500:hover{background-color:#6b7280}
+      .hover\\:bg-gray-600:hover{background-color:#4b5563}
+      .hover\\:bg-gray-700:hover{background-color:#374151}
+      .hover\\:bg-red-500:hover{background-color:#ef4444}
+      .hover\\:text-on-surface:hover{color:#f9fafb}
+      .hover\\:underline:hover{text-decoration-line:underline}
+      .focus\\:outline-none:focus{outline:2px solid transparent;outline-offset:2px}
+      .focus\\:ring-2:focus{--tw-ring-offset-shadow:var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);--tw-ring-shadow:var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);box-shadow:var(--tw-ring-offset-shadow),var(--tw-ring-shadow),var(--tw-shadow,0 0 #0000)}
+      .focus\\:ring-primary:focus{--tw-ring-color:#10b981}
+      .disabled\\:bg-gray-500:disabled{background-color:#6b7280}
+      .disabled\\:opacity-50:disabled{opacity:.5}
+      @media (min-width:768px){
+      .md\\:grid-cols-3{grid-template-columns:repeat(3,minmax(0,1fr))}
+      .md\\:grid-cols-5{grid-template-columns:repeat(5,minmax(0,1fr))}
+      }
+      @media (min-width:640px){
+      .sm\\:grid-cols-4{grid-template-columns:repeat(4,minmax(0,1fr))}
+      }
+    </style>
+
   <script type="importmap">
 {
   "imports": {
